[package]
name = "rustscraper"
version = "0.1.0"
authors = ["Kronifer <dillonr5@live.wsd1.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
